<resources>
    <string name="app_name">QuickHealthLifestyle</string>
    <string name="app_name_spaces">Quick Health Lifestyle</string>

    <string name="login">Login</string>
    <string name="login_email_address">Email Address:</string>
    <string name="login_password">Password:</string>
    <string name="login_account_registration">Account Registration</string>

    <string name="register">Register</string>
    <string name="register_intro">Account Registration</string>
    <string name="register_return_to_login">Return to login</string>

    <string name="title_home">Home</string>
    <string name="title_insights">Insights</string>
    <string name="title_profile">Profile</string>

    <string name="home_intro">Welcome, %1$s!</string>
    <string name="home_recommended_sleep">Recommended Sleep:</string>
    <string name="home_target_hours">Yesterday\'s Sleep:</string>
    <string name="home_recommended_hydration">Recommended Hydration:</string>
    <string name="home_recommended_exercise">Recommended Exercise:</string>
    <string name="home_status">Status:</string>

    <string name="home_placeholder_rec1">%1$s hours</string>
    <string name="home_placeholder_rec2">9 cups</string>
    <string name="home_placeholder_status2">Unsatisfied</string>
    <string name="home_placeholder_status3">Incomplete</string>
    <string name="home_placeholder_rec3">%1$s minutes daily</string>

    <string name="insights_intro">Displaying Insights of %1$s:</string>
    <string name="insights_sleep">Sleep:</string>
    <string name="insights_hydration">Hydration:</string>
    <string name="insights_exercise">Exercise:</string>
    <string name="insights_sleep_yaxis">Hours Slept</string>
    <string name="insights_hydration_yaxis">Cups Drank</string>
    <string name="insights_exercise_yaxis">Hours Exercised</string>

    <string name="profile_intro">Displaying Profile for %1$s:</string>
    <string name="profile_first_name">First Name:</string>
    <string name="profile_last_name">Last Name:</string>
    <string name="profile_email">Email (Permanent):</string>
    <string name="profile_email_sample">email@email.com</string>
    <string name="profile_password">Password (Permanent):</string>
    <string name="profile_password_sample">●●●●●●●●</string>
    <string name="profile_height">Height (Inches):</string>
    <string name="profile_weight">Weight (Pounds):</string>
    <string name="profile_sex">Sex:</string>
    <string-array name="sex_array">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string name="profile_age">Age:</string>
    <string name="profile_preferred_gym_time">Preferred Gym Time:</string>
    <string-array name="profile_preferred_gym_time_array">
        <item>5:00 AM</item>
        <item>5:30 AM</item>
        <item>6:00 AM</item>
        <item>6:30 AM</item>
        <item>7:00 AM</item>
        <item>7:30 AM</item>
        <item>8:00 AM</item>
        <item>8:30 AM</item>
        <item>9:00 AM</item>
        <item>9:30 AM</item>
        <item>10:00 AM</item>
        <item>10:30 AM</item>
        <item>11:00 AM</item>
        <item>11:30 AM</item>
        <item>12:00 PM</item>
        <item>12:30 PM</item>
        <item>1:00 PM</item>
        <item>1:30 PM</item>
        <item>2:00 PM</item>
        <item>2:30 PM</item>
        <item>3:00 PM</item>
        <item>3:30 PM</item>
        <item>4:00 PM</item>
        <item>4:30 PM</item>
        <item>5:00 PM</item>
        <item>5:30 PM</item>
        <item>6:00 PM</item>
        <item>6:30 PM</item>
        <item>7:00 PM</item>
        <item>7:30 PM</item>
        <item>8:00 PM</item>
        <item>8:30 PM</item>
        <item>9:00 PM</item>
        <item>9:30 PM</item>
        <item>10:00 PM</item>
        <item>10:30 PM</item>
        <item>11:00 PM</item>
        <item>11:30 PM</item>
        <item>12:00 AM</item>
        <item>12:30 AM</item>
        <item>1:00 AM</item>
        <item>1:30 AM</item>
        <item>2:00 AM</item>
        <item>2:30 AM</item>
        <item>3:00 AM</item>
        <item>3:30 AM</item>
        <item>4:00 AM</item>
        <item>4:30 AM</item>
    </string-array>
    <string name="profile_update">Update</string>
    <string name="profile_logout">Logout</string>


</resources>