<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <TextView
        android:id="@+id/text_home"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/home_welcome"
        android:layout_width="390dp"
        android:layout_height="40dp"
        android:layout_marginTop="0dp"
        android:text="@string/home_intro"
        android:textColor="#000000"
        android:gravity="center"
        android:textSize="30sp"
        android:textStyle="bold"
        app:autoSizeTextType="uniform"
        app:autoSizeMinTextSize="12sp"
        app:autoSizeMaxTextSize="100sp"
        app:autoSizeStepGranularity="2sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.024"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/home_sleep_bubble"
        android:layout_width="380dp"
        android:layout_height="185dp"
        android:layout_marginTop="6dp"
        android:contentDescription="@null"
        android:src="@drawable/rounded_rectangle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/home_welcome" />

    <TextView
        android:id="@+id/home_sleep"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/home_recommended_sleep"
        android:textColor="#03AC13"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/home_sleep_bubble"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/home_sleep_bubble"
        app:layout_constraintTop_toTopOf="@+id/home_sleep_bubble" />

    <TextView
        android:id="@+id/home_sleep_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/home_target_hours"
        android:textColor="#03AC13"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/home_sleep_bubble"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/home_sleep_bubble"
        app:layout_constraintTop_toBottomOf="@+id/home_sleep" />

    <ImageView
        android:id="@+id/home_hydration_bubble"
        android:layout_width="380dp"
        android:layout_height="185dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/rounded_rectangle"
        android:contentDescription="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/home_sleep_bubble" />

    <TextView
        android:id="@+id/home_hydration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/home_recommended_hydration"
        android:textColor="#207fc2"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/home_hydration_bubble"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/home_hydration_bubble"
        app:layout_constraintTop_toTopOf="@+id/home_hydration_bubble" />

    <TextView
        android:id="@+id/home_hydration_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/home_status"
        android:textColor="#207fc2"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/home_hydration_bubble"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/home_hydration_bubble"
        app:layout_constraintTop_toBottomOf="@+id/home_hydration" />

    <ImageView
        android:id="@+id/home_exercise_bubble"
        android:layout_width="380dp"
        android:layout_height="185dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/rounded_rectangle"
        android:contentDescription="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/home_hydration_bubble" />

    <TextView
        android:id="@+id/home_exercise"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/home_recommended_exercise"
        android:textColor="#BA3525"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/home_exercise_bubble"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/home_exercise_bubble"
        app:layout_constraintTop_toTopOf="@+id/home_exercise_bubble" />

    <TextView
        android:id="@+id/home_exercise_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/home_status"
        android:textColor="#BA3525"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/home_exercise_bubble"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/home_exercise_bubble"
        app:layout_constraintTop_toBottomOf="@+id/home_exercise" />


    <TextView
        android:id="@+id/home_placeholder1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/home_placeholder_rec1"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/home_sleep_bubble"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/home_sleep_bubble"
        app:layout_constraintTop_toBottomOf="@+id/home_sleep" />

    <TextView
        android:id="@+id/home_placeholder2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/home_placeholder_rec1"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/home_sleep_bubble"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/home_sleep_bubble"
        app:layout_constraintTop_toBottomOf="@+id/home_sleep_progress" />

    <TextView
        android:id="@+id/hydrationRecommendationValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/home_placeholder_rec2"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/home_sleep_bubble"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/home_sleep_bubble"
        app:layout_constraintTop_toBottomOf="@+id/home_hydration" />

    <TextView
        android:id="@+id/home_placeholder4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/home_placeholder_status3"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/home_sleep_bubble"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/home_sleep_bubble"
        app:layout_constraintTop_toBottomOf="@+id/home_hydration_progress" />

    <TextView
        android:id="@+id/home_placeholder5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/home_placeholder_rec3"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/home_sleep_bubble"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/home_sleep_bubble"
        app:layout_constraintTop_toBottomOf="@+id/home_exercise" />

    <TextView
        android:id="@+id/home_placeholder6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/home_placeholder_status3"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/home_sleep_bubble"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/home_sleep_bubble"
        app:layout_constraintTop_toBottomOf="@+id/home_exercise_progress" />


</androidx.constraintlayout.widget.ConstraintLayout>