<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.notifications.NotificationsFragment">

    <TextView
        android:id="@+id/text_notifications"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/register_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_intro"
        android:textColor="#000000"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/register_bubble"
        android:layout_width="380dp"
        android:layout_height="555dp"
        android:layout_marginTop="6dp"
        android:contentDescription="@null"
        android:src="@drawable/rounded_rectangle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_welcome" />

    <TextView
        android:id="@+id/register_first_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="12dp"
        android:labelFor="@+id/profile_password_input"
        android:text="@string/profile_first_name"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/register_bubble"
        app:layout_constraintTop_toTopOf="@+id/register_bubble" />

    <EditText
        android:id="@+id/register_first_name_input"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_rectangle2"
        android:inputType="text"
        android:maxLength="20"
        android:paddingStart="10dp"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/register_bubble"
        app:layout_constraintHorizontal_bias="0.177"
        app:layout_constraintStart_toStartOf="@+id/register_bubble"
        app:layout_constraintTop_toBottomOf="@+id/register_first_name"
        tools:ignore="Autofill,LabelFor,RtlSymmetry" />

    <TextView
        android:id="@+id/register_last_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="6dp"
        android:labelFor="@+id/profile_password_input"
        android:text="@string/profile_last_name"
        android:textColor="#000000"
        android:textSize="17sp"
        app:layout_constraintStart_toStartOf="@+id/register_bubble"
        app:layout_constraintTop_toBottomOf="@+id/register_first_name_input" />

    <EditText
        android:id="@+id/register_last_name_input"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_rectangle2"
        android:inputType="text"
        android:maxLength="20"
        android:paddingStart="10dp"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/register_bubble"
        app:layout_constraintHorizontal_bias="0.177"
        app:layout_constraintStart_toStartOf="@+id/register_bubble"
        app:layout_constraintTop_toBottomOf="@+id/register_last_name"
        tools:ignore="Autofill,LabelFor,RtlSymmetry" />

    <TextView
        android:id="@+id/register_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="12dp"
        android:labelFor="@+id/profile_username_input"
        android:text="@string/profile_email"
        android:textColor="#000000"
        android:textSize="17sp"
        app:layout_constraintStart_toStartOf="@+id/register_bubble"
        app:layout_constraintTop_toBottomOf="@+id/register_last_name_input" />

    <EditText
        android:id="@+id/register_email_input"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_rectangle2"
        android:inputType="textEmailAddress"
        android:maxLength="254"
        android:paddingStart="10dp"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/register_bubble"
        app:layout_constraintHorizontal_bias="0.177"
        app:layout_constraintStart_toStartOf="@+id/register_bubble"
        app:layout_constraintTop_toBottomOf="@+id/register_email"
        tools:ignore="Autofill,LabelFor,RtlSymmetry" />

    <TextView
        android:id="@+id/register_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="6dp"
        android:labelFor="@+id/profile_password_input"
        android:text="@string/profile_password"
        android:textColor="#000000"
        android:textSize="17sp"
        app:layout_constraintStart_toStartOf="@+id/register_bubble"
        app:layout_constraintTop_toBottomOf="@+id/register_email_input" />

    <EditText
        android:id="@+id/register_password_input"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_rectangle2"
        android:inputType="textPassword"
        android:maxLength="20"
        android:paddingStart="10dp"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/register_bubble"
        app:layout_constraintHorizontal_bias="0.177"
        app:layout_constraintStart_toStartOf="@+id/register_bubble"
        app:layout_constraintTop_toBottomOf="@+id/register_password"
        tools:ignore="Autofill,LabelFor,RtlSymmetry" />

    <TextView
        android:id="@+id/register_height"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="6dp"
        android:labelFor="@+id/profile_password_input"
        android:text="@string/profile_height"
        android:textColor="#000000"
        android:textSize="17sp"
        app:layout_constraintStart_toStartOf="@+id/register_bubble"
        app:layout_constraintTop_toBottomOf="@+id/register_password_input" />

    <EditText
        android:id="@+id/register_height_input"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_rectangle2"
        android:inputType="number"
        android:maxLength="3"
        android:paddingStart="10dp"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/register_bubble"
        app:layout_constraintHorizontal_bias="0.177"
        app:layout_constraintStart_toStartOf="@+id/register_bubble"
        app:layout_constraintTop_toBottomOf="@+id/register_height"
        tools:ignore="Autofill,LabelFor,RtlSymmetry" />

    <TextView
        android:id="@+id/register_weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="6dp"
        android:labelFor="@+id/profile_password_input"
        android:text="@string/profile_weight"
        android:textColor="#000000"
        android:textSize="17sp"
        app:layout_constraintStart_toStartOf="@+id/register_bubble"
        app:layout_constraintTop_toBottomOf="@+id/register_height_input" />

    <EditText
        android:id="@+id/register_weight_input"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_rectangle2"
        android:inputType="number"
        android:maxLength="3"
        android:paddingStart="10dp"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/register_bubble"
        app:layout_constraintHorizontal_bias="0.177"
        app:layout_constraintStart_toStartOf="@+id/register_bubble"
        app:layout_constraintTop_toBottomOf="@+id/register_weight"
        tools:ignore="Autofill,LabelFor,RtlSymmetry" />

    <TextView
        android:id="@+id/register_sex"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="6dp"
        android:labelFor="@+id/profile_password_input"
        android:text="@string/profile_sex"
        android:textColor="#000000"
        android:textSize="17sp"
        app:layout_constraintStart_toStartOf="@+id/register_bubble"
        app:layout_constraintTop_toBottomOf="@+id/register_weight_input" />

    <Spinner
        android:id="@+id/register_sex_spinner"
        android:layout_width="200dp"
        android:layout_height="32dp"
        android:background="@drawable/rounded_rectangle2"
        android:drawSelectorOnTop="true"
        android:entries="@array/sex_array"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/register_bubble"
        app:layout_constraintHorizontal_bias="0.177"
        app:layout_constraintStart_toStartOf="@+id/register_bubble"
        app:layout_constraintTop_toBottomOf="@+id/register_sex" />

    <TextView
        android:id="@+id/register_age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="6dp"
        android:labelFor="@+id/profile_password_input"
        android:text="@string/profile_age"
        android:textColor="#000000"
        android:textSize="17sp"
        app:layout_constraintStart_toStartOf="@+id/register_bubble"
        app:layout_constraintTop_toBottomOf="@+id/register_sex_spinner" />

    <EditText
        android:id="@+id/register_age_input"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_rectangle2"
        android:inputType="number"
        android:maxLength="3"
        android:paddingStart="10dp"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/register_bubble"
        app:layout_constraintHorizontal_bias="0.177"
        app:layout_constraintStart_toStartOf="@+id/register_bubble"
        app:layout_constraintTop_toBottomOf="@+id/register_age"
        tools:ignore="Autofill,LabelFor,RtlSymmetry" />

    <TextView
        android:id="@+id/register_preferred_gym_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="6dp"
        android:labelFor="@+id/profile_password_input"
        android:text="@string/profile_preferred_gym_time"
        android:textColor="#000000"
        android:textSize="17sp"
        app:layout_constraintStart_toStartOf="@+id/register_bubble"
        app:layout_constraintTop_toBottomOf="@+id/register_age_input" />

    <Spinner
        android:id="@+id/register_preferred_gym_time_spinner"
        android:layout_width="200dp"
        android:layout_height="32dp"
        android:background="@drawable/rounded_rectangle2"
        android:drawSelectorOnTop="true"
        android:entries="@array/profile_preferred_gym_time_array"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/register_bubble"
        app:layout_constraintHorizontal_bias="0.177"
        app:layout_constraintStart_toStartOf="@+id/register_bubble"
        app:layout_constraintTop_toBottomOf="@+id/register_preferred_gym_time" />

    <Button
        android:id="@+id/register_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_bubble" />

    <ProgressBar
        android:id="@+id/register_progress_bar"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="256dp"
        app:layout_constraintEnd_toEndOf="@+id/register_bubble"
        app:layout_constraintHorizontal_bias="0.843"
        app:layout_constraintStart_toStartOf="@+id/register_bubble"
        app:layout_constraintTop_toTopOf="@+id/register_bubble" />

    <TextView
        android:id="@+id/register_return_to_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:text="@string/register_return_to_login"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_button" />


</androidx.constraintlayout.widget.ConstraintLayout>